--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":"npx nodemon src/index.js"
+    "dev": "npx nodemon src/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "http-status-codes": "^2.3.0",
     "nodemon": "^3.1.10"
   }
 }
