--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "http-status-codes": "^2.3.0",
+    "marked": "^16.3.0",
     "mongoose": "^8.18.2",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "sanitize-html": "^2.17.0",
+    "turndown": "^7.2.1"
   }
 }
