--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^8.18.2",
     "nodemon": "^3.1.10",
     "sanitize-html": "^2.17.0",
-    "turndown": "^7.2.1"
+    "turndown": "^7.2.1",
+    "winston": "^3.18.3"
   }
 }
