--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nodemon": "^3.1.10",
     "sanitize-html": "^2.17.0",
     "turndown": "^7.2.1",
-    "winston": "^3.18.3"
+    "winston": "^3.18.3",
+    "winston-mongodb": "^7.0.1"
   }
 }
